# openlock

./: .gitignore  Cargo.toml  README.md
openlock/: Cargo.toml  package.json  pnpm-lock.yaml
openlock/src/: main.rs
openlock/src/components/: mod.rs  nav.rs  user.rs
openlock/static/: style.css
openlock/templates/: base.html  index.html
src/: main.rs
