[package]
name = "openlock"
readme = "../README.md"
authors = ["Alex March <alex@hosaka.cc>"]
description = "An Open space for Locksport community built on web3 tech"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4" }
anyhow = "1.0.75"
env_logger = "0.10.0"
ethers = { version = "2.0.9", features = ["ws"] }
leptos = { version = "0.4.10", features = ["ssr"] }
log = "0.4.20"

[dev-dependencies]
