[package]
name = "openlock"
readme = "../README.md"
authors = ["Alex March <alex@hosaka.cc>"]
description = "An Open space for Locksport community built on web3 tech"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = "0.6.20"
ethers = { version = "2.0.10", features = ["ws"] }
serde = "1.0.190"
siwe = { version = "0.6.0", features = ["serde"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
